# qrcode-share

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.test.yml  docker-compose.yml
deploy/: qrcode-share.service
docs/en/: api.md  configure_and_deploy.md  database.md  fronted.md  images.md  overview.md  performance_improve.md  task.md  test.md
migrations/: 001_initial.sql  002_cleanup.sql  003_stats.sql
nginx/: nginx.conf  nginx.test.conf
qrcode_share_backend/: .dockerignore  Cargo.toml  Dockerfile
qrcode_share_backend/.sqlx/: .gitkeep
qrcode_share_backend/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  router.rs
qrcode_share_backend/src/db/: channel_repo.rs  database.rs  mod.rs
qrcode_share_backend/src/handlers/: channels.rs  messages.rs  mod.rs  system.rs  websocket.rs  wechat.rs
qrcode_share_backend/src/middleware/: mod.rs  rate_limit.rs  security.rs
qrcode_share_backend/src/models/: channel.rs  message.rs  mod.rs  ws.rs
qrcode_share_backend/src/state/: app_state.rs  channel_state.rs  metrics.rs  mod.rs  rate_limiter.rs
qrcode_share_backend/src/tasks/: cleanup.rs  mod.rs
qrcode_share_backend/tests/: database_pool_tests.rs  docker_tests.rs  integration_tests.rs  migration_tests.rs  rate_limit_edge_cases.rs  security_tests.rs  websocket_edge_cases.rs  websocket_tests.rs
qrcode_share_fronted/: .dockerignore  .prettierrc.js  Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
qrcode_share_fronted/src/: App.tsx  index.css
qrcode_share_fronted/src/api/: channels.ts  client.ts  index.ts  messages.ts  system.ts  websocket.ts
qrcode_share_fronted/src/components/: index.ts
qrcode_share_fronted/src/constants/: images.ts
qrcode_share_fronted/src/hooks/: index.ts  useLinkWarning.ts  useTimer.ts  useWebSocket.ts  useWechat.ts
qrcode_share_fronted/src/pages/: ChannelListPage.tsx  ChannelPage.tsx  CreatePage.tsx  index.ts  (+2 more)
scripts/: deploy.ps1  deploy.sh  docker-env.ps1  quick-test.ps1  run-tests.ps1  run-tests.sh  test-full.ps1  test-full.sh
(+109 files in other folders)
