[package]
name = "qrcode_share_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# Async utilities
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "migrate"] }

# Data structures
dashmap = "6"
compact_str = { version = "0.8", features = ["serde"] }
smallvec = { version = "1", features = ["serde"] }

# Hashing
ahash = "0.8"

# Synchronization
parking_lot = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Channels

# Network
socket2 = { version = "0.5", features = ["all"] }

# Object pooling

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Security
bcrypt = "0.15"

# HTTP client (for WeChat API)
reqwest = { version = "0.12", features = ["json"] }

# SHA1 hashing (for WeChat JS-SDK signature)
sha1 = "0.10"
hex = "0.4"

# Configuration
dotenvy = "0.15"

# System information
sysinfo = "0.30"

# Memory allocator (optional, uncomment if needed)
# jemallocator = { version = "0.5", features = ["unprefixed_malloc_on_supported_platforms"] }

[dev-dependencies]
# Testing
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.21"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
serial_test = "3"
temp-env = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 3

[features]
default = []
